--- a/recipes.css
+++ b/recipes.css
@@ -201,3 +201,12 @@ h3 {
   padding-bottom: 200px;
   padding-left: 350px;
 }
+
+.breakfastmenu a:link {
+  color:black; 
+  text-decoration: none;
+}
+
+.breakfastmenu a:hover {
+  color: #426236;
+}
